--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,11 @@
     <color name="colorAccentMonochromatic">#c23854</color>
     <color name="colorAnalogous">#9509b8</color>
     <color name="colorTriadic">#b8a609</color>
+
+    <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
+    <color name="buttonText">#E4FFDE</color>
+    <color name="orange">#FAA61A</color>
+    <color name="appraisalHighlight">#bb3e50b3</color>
+
 </resources>
